[package]
name = "uploadcare"
version = "0.1.0"
authors = ["yarikbratashchuk <yarik.bratashchuk@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yarikbratashchuk/uploadcare-rust"
repository= "https://github.com/yarikbratashchuk/uploadcare-rust"
documentation = "https://docs.rs/uploadcare"
description = "Rust client for the Uploadcare REST and Upload API"
keywords = ["uploadcare", "api"]
categories = ["api-bindings"]

[lib]
name = "ucare"
path = "src/lib.rs"

[profile.release]
panic = 'abort'

[features]
default = ["full"]
full = [
	"rest",
	"upload",
]
rest = []	
upload = []

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
rust-crypto = "^0.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.9.0"
log = "0.4.8"
url = "2.1.1"

[dev-dependencies]
env_logger = "0.7.1"
